syntax = "proto3";

package com.gx.wisestone.ezwork.app.grpc;
import "AppCommon.proto";
option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.app.grpc.appuser";
option java_outer_classname = "AppUserCenterInterfaceService";


service AppUserCenterInterface {

    //绑定app用户
    rpc bindAppUser (BindAppUserRequest) returns (AppInfoResponse) {}
    //更新app信息
    rpc updateAppUser (UpdateAppUserRequest) returns (AppInfoResponse) {}
    //获取用户信息
    rpc getAppUserInfo (GetAppUserInfoRequest) returns (AppInfoResponse) {}
    //退出接口
    rpc appLogout (AppLogoutRequest) returns (CommonResponse) {}

}


//绑定校验
message BindAppUserValidationRequest {

}

message AppGetRoomInfoRequest {
    int64 room_id = 1;//房间id
    int64 owner_id = 2;//业主
}
message GetRoomsRequest {

}

//退出app
message AppLogoutRequest {

}

//
message AppUserRegisterDto {
    //用户类型
    int32 type = 1;
    //用户真实姓名
    string name = 2;
    //性别 1 男 2 女
    int32 gender = 3;
    //手机号码
    string mobile = 4;
    //账号名称
    string account_name = 5;
    //账号密码
    string account_password = 6;
    //年龄
    int32 age = 7;
    //证件类型
    int32 identity_type = 8;
    //证件号
    string identity_card = 9;
    //监控权限 1 有 2 无
    int32 monitor = 10;
    //消息推送权限 1 有 2 无
    int32 msg_notice = 11;
    //验证码
    string verification_code = 12;
    //报警推送权限 1 有 2 无
    int32 alarm_notice = 13;

}

//绑定app
message BindAppUserRequest {

    string nick_name = 2;  //昵称
    string name = 3;  //用户姓名
    int32 gender = 4;  //性别1.男2女
    string mobile = 5;  //联系方式
    int32 age = 6;  //年龄
    int32 identity_type = 7;  //证件类型1居民身份证2居住证3签证4护照5户口本
    string identity_card = 8;  //证件号
    int32 msg_notice = 9;  //消息通知 1开启 2关闭
    int32 type = 12;  //用户类别1户主
    int32 alarm_notice = 13;  //报警通知 1开启 2关闭

}

//更新app用户信息
message UpdateAppUserRequest {

    string nick_name = 2;  //昵称
    string name = 3;  //用户姓名
    int32 gender = 4;  //性别1.男2女
    string mobile = 5;  //联系方式
    int32 age = 6;  //年龄
    int32 identity_type = 7;  //证件类型1居民身份证2居住证3签证4护照5户口本
    string identity_card = 8;  //证件号
    int32 msg_notice = 9;  //消息通知 1开启 2关闭
    int32 type = 12;  //用户类别1户主
    int32 alarm_notice = 13;  //报警通知 1开启 2关闭
    bytes image_bytes =14;//图片数据

}


//业主相关
message AppUserInfoDto {
    int64 id = 1;
    //姓名
    string name = 2;
    //性别 1男；2女
    int32 gender = 3;
    //手机号
    string mobile = 4;
    //昵称
    string nick_name = 5;
    //头像
    string image_url = 6;
    //用户id
    string user_id = 7;
    //年龄
    int32 age = 9;
    //消息推送开关：1 是；2 否
    int32 msg_switch = 13;
}


//获取用户信息
message GetAppUserInfoRequest {

}


message AppInfoResponse {
    int32 code = 1;//返回码
    string msg = 2;//返回消息
    map<string,string> data = 3;
    //app用户信息
    AppUserInfoDto appUserInfoDto = 4;
}
