syntax = "proto3";

import "WscoreCommon.proto";

option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.grpc.ds.accessrecord";
option java_outer_classname = "AccessRecordProviderProto";
package com.gx.wisestone.work.grpc.ds;


service AccessRecordProvider {
    // 考勤记录统一上报接口
    rpc accessRecordReported(AccessRecordReportedDto) returns (AccessRecordReportedResp) {
    }

}

message AccessRecordReportedResp {
    //返回码
    int32 code = 1;
    //返回消息
    string msg = 2;
    //提示信息
    string tips = 3;
    map<string,string> data = 4;
    //结果列表
    repeated AccessRecordReportedDto content = 5;
    //改动条数
    int32 modified_count = 6;
}

message AccessRecordReportedDto {
    int32 tenant_no = 1;
    int64 id = 2; 
    int64 device_id = 3; 
    string device_name = 4; 
    int64 employee_id = 5; 
    string employee_name = 6; 
    string address = 7; 
    string lng = 8; 
    string lat = 9; 
    string phone_number = 10;
    string identity_card = 11;
    string ic_card = 12;
    int32 type = 13;
    int64 company_id =14;
    string company_name = 15;
    string work_time =16;
    string closing_time =17;
    int32 work_type = 18;
    int32 closing_type = 19;
}